Sync JDK-8294962 (#3)